Created layout skeleton

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/garybunofsky/sign#readme",
   "dependencies": {
     "express": "^4.16.2",
+    "nodemon": "^1.12.1",
     "path": "^0.12.7"
   }
 }
