--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple icons, made for you.",
   "main": "index.js",
   "engines": {
-    "node": "8.7.0"
+    "node": "8.7.0",
+    "npm": "5.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
